--- a/md-new.html
+++ b/md-new.html
@@ -2,8 +2,10 @@
 <html>
   <!--wmartinmimi/md.html-->
   <!--MIT Licensed https://github.com/wmartinmimi/md.html/blob/main/LICENSE-->
-  <!--other licenses from imported library will be displayed in browser console,
-     and also availble in https://github.com/wmartinmimi/md.html/licenses.json-->
+  <!--
+    other licenses from imported library will be displayed in browser console,
+    and also availble in https://github.com/wmartinmimi/md.html/licenses.json
+    -->
 
   <head>
     <meta charset="UTF-8" />
