--- a/md.html
+++ b/md.html
@@ -2,447 +2,53 @@
 <html>
   <!--wmartinmimi/md.html-->
   <!--MIT Licensed https://github.com/wmartinmimi/md.html/blob/main/LICENSE-->
+  <!--
+    other licenses from imported library will be displayed in browser console,
+    and also availble in https://github.com/wmartinmimi/md.html/licenses.json
+    -->
 
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <!--jquery-->
-    <!--MIT Licensed https://github.com/jquery/jquery/blob/main/LICENSE.txt-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-
-    <!--drawdown | markdown rendering-->
-    <!--MIT Licensed https://github.com/adamvleggett/drawdown/blob/master/LICENSE-->
-    <script src="https://cdn.jsdelivr.net/gh/wmartinmimi/md.html@v1.0/drawdown.js"></script>
-
-    <!--katex | latex rendering-->
-    <!--MIT Licensed https://github.com/KaTeX/KaTeX/blob/main/LICENSE-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css"
-      integrity="sha384-vKruj+a13U8yHIkAyGgK1J3ArTLzrFGBbBc0tDp4ad/EyewESeXE/Iv67Aj8gKZ0" crossorigin="anonymous" />
-    <script src="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.js"
-      integrity="sha384-PwRUT/YqbnEjkZO0zZxNqcxACrXe+j766U2amXcgMg5457rve2Y7I6ZJSm2A0mS4"
-      crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/contrib/auto-render.min.js"
-      integrity="sha384-+VBxd3r6XgURycqtZ117nYw44OOcIax56Z4dCRWbxyPt0Koah1uHoK0o4+/RRE05"
-      crossorigin="anonymous"></script>
-
-    <!--MIT Licensed https://github.com/Yukaii/github-highlightjs-themes-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/wmartinmimi/md.html@v1.0/syntaxhighlight.css" />
-
-    <!--BSD 3-Clause Licensed https://github.com/highlightjs/highlight.js/blob/main/LICENSE-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
-
-    <style>
-      * {
-        --hr-color: #cccccc;
-        --quote-line-color: #d3daea;
-        --quote-text-color: #5a636c;
-        --code-color: #d3daea40;
-        --row-2n-color: #f3f3f3;
-        --table-color: #aaaaaa;
-        --main-bg-color: #ffffff;
-        --link-color: #1671dc;
-        --inline-code-color: #eff1f3;
-        color: #24292f;
-        font-family: Segoe UI, Helvetica, Arial, sans-serif;
-      }
-
-      @media (prefers-color-scheme: dark) {
-        * {
-          --hr-color: #30363d;
-          --quote-line-color: #30363d;
-          --code-color: #161b22;
-          --row-2n-color: #161b22;
-          --table-color: #aaaaaa;
-          --main-bg-color: #0d1117;
-          --quote-text-color: #88919b;
-          --inline-code-color: #343941;
-          color: #c9d1d9;
-        }
-      }
-
-      code {
-        font-family: "Courier New", Courier, monospace;
-        background-color: var(--inline-code-color);
-        padding: 3px;
-        padding-left: 5px;
-        padding-right: 5px;
-        border-radius: 5px;
-      }
-
-      pre>code {
-        display: block;
-        overflow: auto;
-        padding: 1em;
-        background: var(--code-color);
-      }
-
-      body {
-        box-sizing: border-box;
-        margin: 0;
-        background-color: var(--main-bg-color);
-      }
-
-      a {
-        color: var(--link-color);
-        text-decoration: none;
-      }
-
-      a:hover {
-        text-decoration-line: underline;
-      }
-
-      hr {
-        margin: 1em 0;
-        border: 0;
-        border-bottom: 5px solid var(--hr-color);
-      }
-
-      blockquote {
-        margin-left: 0;
-        padding: 0.5em 0 0.5em 2em;
-        border-left: 5px solid var(--quote-line-color);
-        color: var(--quote-text-color);
-      }
-
-      li,
-      code {
-        margin: 0.4em 0;
-      }
-
-      p {
-        margin: 0.9em 0;
-      }
-
-      table {
-        border-spacing: 0;
-        border-collapse: collapse;
-      }
-
-      td {
-        padding: 4px 8px;
-      }
-
-      tr:nth-child(2n) {
-        background-color: var(--row-2n-color);
-      }
-
-      th {
-        border-bottom: 1px solid var(--table-color);
-      }
-
-      #markdown {
-        margin: 0;
-        padding: 0.5em;
-        overflow: auto;
-        font-size: 1em;
-        line-height: 1.3;
-      }
-
-      #popup-overlay {
-        visibility: hidden;
-        position: absolute;
-        height: 100vh;
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background-color: grey;
-        opacity: 50%;
-      }
-
-      .popup-container {
-        visibility: hidden;
-        position: absolute;
-        height: 100vh;
-        width: 100%;
-        opacity: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-
-      .popup {
-        position: sticky;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        padding: 0 1rem 1rem 1rem;
-        border-radius: 10px;
-        margin-bottom: 5rem;
-        background: var(--main-bg-color);
-      }
-
-      .popup span {
-        position: absolute;
-        font-weight: 700;
-        right: 18px;
-        top: 15px;
-      }
-
-      .popup span:hover {
-        cursor: pointer;
-        color: var(--quote-text-color);
-      }
-
-      .buttons-container button {
-        font-size: 100%;
-        width: 10rem;
-        height: 30px;
-        background-color: var(--code-color);
-        border-radius: 5px;
-        border-color: var(--quote-line-color);
-      }
-
-      .buttons-container button:hover {
-        cursor: pointer;
-        background-color: var(--quote-text-color);
-      }
-    </style>
   </head>
 
   <body>
+    <p id="js_required_warning">This is a markdown viewer that requires javascript to be enabled.</p>
     <section id="popup-overlay"></section>
-    <div class="popup-container">
-      <div class="popup">
-        <span id="exit-popup">X</span>
-        <h3>Save File</h3>
-        <div class="buttons-container">
-          <button id="save-md" onclick="downloadFile('markdown')">
-            Markdown
-          </button>
-          <button id="save-html" onclick="downloadFile('html')">HTML</button>
-          <button id="save-both" onclick="downloadFile('both')">Both</button>
-        </div>
-      </div>
-    </div>
     <div id="markdown"></div>
     <script>
-      // namespace issue
-      parser = markdown;
-      renderLatex = renderMathInElement;
-      let filePath = null;
-      const exitPopup = document.querySelector("#exit-popup");
-      const popup = document.querySelector(".popup-container");
-      const popupOverlay = document.querySelector("#popup-overlay");
-
-      async function getText(path) {
-        let response = await fetch(path);
-        if (response.ok) {
-          return await response.text();
-        }
-        return false;
-      }
-
-      // Make sure it points to a markdown file
-      function isPathMd(path) {
-        if (path.endsWith(".md") || path.endsWith(".markdown")) {
-          return path;
-        }
-        return null;
-      }
-
-      function getQueryPath() {
-        // Gets URL parameters
-        const queryString = window.location.search;
-        const urlParams = new URLSearchParams(queryString);
-
-        let path = null;
-
-        // Get URL path parameter
-        if (urlParams.has("path")) {
-          path = urlParams.get("path");
-        }
-
-        // if empty: path -> null
-        return path;
-      }
-
-      function getPwd() {
-        let path = getQueryPath();
-        let segs = path.split("/");
-        let pwd = "";
-        for (let i = 0; i < segs.length - 1; i++) {
-          pwd += segs[i] + "/";
-        }
-        return pwd;
-      }
-
-      async function renderMd(path) {
-        // Get markdown element
-        $("#markdown").html(parser(await getText(path)));
-
-        // dynamic title
-        document.title = $("#markdown>h1").first().text();
-
-        for (element of $("img[src]")) {
-          let src = $(element).attr("src");
-          try {
-            new URL(src);
-          } catch {
-            if (!src.startsWith("/")) {
-              src = getPwd() + src;
-              $(element).attr("src", src);
-            }
-          }
-        }
-
-        for (element of $("a[href]")) {
-          console.log(element);
-          let href = $(element).attr("href");
-          try {
-            new URL(href);
-          } catch {
-            if (!href.startsWith("/") && href.length > 0) {
-              href = getPwd() + href;
-              $(element).attr("href", href);
-            }
-          }
-        }
-
-        $("a[href]").click(function (e) {
-          let href = $(this).attr("href");
-          let link = null;
-          try {
-            link = new URL(href);
-          } catch {
-            href =
-              window.location.protocol + "//" + window.location.hostname + href;
-            link = new URL(href);
-          }
-
-          // if same domain
-          if (link.hostname !== window.location.hostname) {
-            return;
-          }
-          // if markdown
-          if (!isPathMd(link.pathname)) {
-            return;
-          }
-          // open markdown
-          e.preventDefault();
-          link = new URL(
-            window.location.href.replace(window.location.search, "") +
-            "?path=" +
-            link.pathname
-          );
-          window.open(link, "_self");
-        });
-        hljs.highlightAll();
-        renderLatex(document.body);
-      }
-
       async function main() {
-        let path = getQueryPath();
-        if (path === null) {
-          let response = await fetch("/index.md");
-          if (response.ok) {
-            window.location.replace(window.location.pathname + "?path=/index.md");
-            return;
-          } else {
-            window.location.replace(window.location.pathname + "?path=/README.md");
-            return;
-          }
-        } else {
-          if (!isPathMd(path)) {
-            // open without saving current url to history
-            window.location.replace(path);
-            return;
-          }
-          let response = await fetch(path);
-          if (response.ok) {
-            filePath = path;
-            renderMd(path);
-            return;
-          } else {
-            // open without saving current url to history
-            window.location.replace(path);
-            return;
-          }
+        document.querySelector("#js_required_warning").style.display = 'none';
+
+        let response = await fetch('https://raw.githubusercontent.com/wmartinmimi/md.html/main/release.json');
+        let json = await response.json();
+        console.log(json);
+
+        response = await fetch(json.licenses);
+        let licenses = await response.json();
+        for (license of licenses){
+          let output = "Library: " + license.name;
+          output += "\nLicense type: " + license.type;
+          output += "\nLicense url: " + license.url;
+          console.log(output)
+        }
+        console.log("License json available at: " + json.licenses);
+
+        for (url of json.js) {
+          let js = document.createElement("script");
+          js.src = url;
+          js.async = false;
+          js.defer = true;
+          document.head.appendChild(js);
+        }
+
+        for (url of json.css) {
+          let link = document.createElement("link");
+          link.href = url;
+          link.rel = "stylesheet"
+          document.head.appendChild(link);
         }
       }
-
-      function getFileName() {
-        if (filePath == null) { return false; }
-
-        let fileName = filePath.replace('.md', '');
-        while (fileName.includes("/")) {
-          fileName = fileName.substring(fileName.indexOf("/") + 1);
-        }
-
-        return fileName
-      }
-
-      function downloadFile(fileType) {
-        const downloadLink = document.createElement("a");
-        if (fileType == "markdown") {
-          downloadLink.href = filePath;
-          // Name the file 
-          if (getFileName() !== false) { downloadLink.download = `${getFileName()}.md`; }
-          else { downloadLink.download = 'download.md'; }
-
-        } else if (fileType == "html") {
-          const html = document.querySelector("html").innerHTML;
-          const dataURI = "data:text/html," + encodeURIComponent(html);
-          downloadLink.href = dataURI;
-          // Name the file 
-          downloadLink.download = `${getFileName()}.html`
-
-        } else if (fileType == "both") {
-          downloadFile("markdown");
-          downloadFile("html");
-
-        } else { return; }
-
-        popup.style.visibility = "hidden";
-        popupOverlay.style.visibility = "hidden";
-        document.querySelector('body').style.overflowY = 'visible';
-        downloadLink.click();
-      }
-
-      let keys = {
-        Control: false,
-        s: false,
-      };
-
-      $(document).bind("keydown", function (e) {
-        if (e.ctrlKey && e.which == 83) {
-          e.preventDefault();
-        }
-      });
-
-      addEventListener("keydown", (event) => {
-        if (event.key === "Control") {
-          keys.a = true;
-        }
-        if (event.key === "s") {
-          keys.s = true;
-        }
-        if (keys.a && keys.s) {
-          popup.style.visibility = "visible";
-          popupOverlay.style.visibility = "visible";
-          popup.style.top = window.scrollY + 'px';
-          popupOverlay.style.top = window.scrollY + 'px';
-          document.querySelector('body').style.overflowY = 'hidden';
-        }
-      });
-
-      addEventListener("keyup", (event) => {
-        if (event.key === "Control") {
-          keys.a = false;
-        }
-        if (event.key === "s") {
-          keys.s = false;
-        }
-      });
-
-      exitPopup.addEventListener("click", () => {
-        popup.style.visibility = "hidden";
-        popupOverlay.style.visibility = "hidden";
-        document.querySelector('body').style.overflowY = 'visible';
-      });
-
       main();
     </script>
   </body>
